# InwentaryzacjaIPZ

./: .gitignore  README.md  README.txt  WBS.vpd  docker-compose.yml  linki.md  srs.docx
DOKUMENTACJA/: README.md
Inwentaryzacja/: .gitignore  Dockerfile  pom.xml
Inwentaryzacja/src/main/java/Zut_IPZ/Inwentaryzacja/: InwentaryzacjaApplication.java
Inwentaryzacja/src/main/java/Zut_IPZ/Inwentaryzacja/Role/: Role.java
Inwentaryzacja/src/main/resources/: application.properties
api_tests/: tests.py
database/: database_v3.sql  inventoryzut.sql
db/: init.sql
frontend/: Dockerfile  index.html  items.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  style.scss
frontend/src/components/: DeleteItemComponent.vue  HomeNav.vue  ItemsInfo.vue  ItemsTable.vue  LoginForm.vue  Navigation.vue  RegistrationForm.vue  TreeElement.vue  TreeNav.vue  TreeSidebar.vue
frontend/src/domain/: fetchTree.ts
frontend/src/router/: index.ts
frontend/src/stores/: selectedItemEntryStore.ts
frontend/src/views/: DeleteItemView.vue  HomeView.vue  ItemsInfoView.vue  LoginView.vue  ProductsView.vue  RegisterView.vue
frontend/testing_requirements/: README.md  attribute.ts  item.ts
rest_api_tests/: .env  Cargo.toml  Dockerfile
rest_api_tests/src/: database.rs  main.rs
rest_api_tests/src/endpoint_tests/: attribute.rs  item.rs  mod.rs  tag.rs  test_utils.rs
rest_api_tests/src/test_lib/: dotenv_load.rs  http_utils.rs  mod.rs  pool.rs  test_pool.rs  traits.rs
testing_requirements/: attribute_types.ts  item.ts  item_entries.ts  tag.ts
(+80 files in other folders)
